# jump_king

./: .gitignore  README.md  app.js  index.html  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
app/: __init__.py  main.py  translator.py
static/: app.js  index.html
