[project]
name = "french-audio-translator"
version = "1.0.0"
description = "Real-time French audio to English translation using TranslateGemma"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "transformers>=4.45.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "langdetect>=1.0.9",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[tool.setuptools]
packages = ["app"]
